--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -13,13 +13,44 @@ $orange: #ff6d0a;
 $white: #fffbf9;
 $black: #2f2f2f;
 $gris: #b1b1b1;
+
 header {
   position: sticky;
   top: 0;
   width: 100%;
   padding: 15px;
+  padding-left: 0px;
+  padding-right: 0px;
   border-bottom: 2px solid #ff6d0a;
   display: flex;
-  align-content: space-between;
-  
+  justify-content: space-between;
+  align-items: center;
+
+  .logo {
+    width: 10%;
+    display: flex;
+    justify-content: center;
+    img{
+      filter: drop-shadow(0 0.05rem 0.5rem $gris);
+      width: 35%;
+    }
+
+  }
+
+  .links {
+    display: grid;
+    grid-template-columns: repeat(5, 5rem);
+    gap: 0.25rem;
+
+    place-content: center;
+   
+
+    a {
+      text-align: left;
+      font-size: 0.8rem;
+      color: $orange;
+      text-decoration: none;
+    }
+
+  }
 }
