--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -14,6 +14,16 @@ $white: #fffbf9;
 $black: #2f2f2f;
 $gris: #b1b1b1;
 
+:root {
+  background-color: $white;
+  color: $black;
+  transition-property: background, color;
+  transition-duration: 500ms;
+  &.dark {
+    background-color: $black;
+    color: $white;
+  }
+}
 header {
   position: sticky;
   top: 0;
@@ -30,27 +40,30 @@ header {
     width: 10%;
     display: flex;
     justify-content: center;
-    img{
+    img {
       filter: drop-shadow(0 0.05rem 0.5rem $gris);
       width: 35%;
     }
-
   }
 
   .links {
     display: grid;
-    grid-template-columns: repeat(5, 5rem);
+    grid-template-columns: repeat(6, 5rem);
+    align-content: center;
+    place-content: center;
     gap: 0.25rem;
 
     place-content: center;
-   
-
-    a {
+    button {
+      background: transparent;
+      border: none;
+      cursor: pointer;
+    }
+    .navelement {
       text-align: left;
       font-size: 0.8rem;
       color: $orange;
       text-decoration: none;
     }
-
   }
 }
