--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -17,15 +17,37 @@ $gris: #b1b1b1;
 :root {
   background-color: $white;
   color: $black;
+  height: 300%;
   transition-property: background, color;
   transition-duration: 500ms;
   &.dark {
     background-color: $black;
     color: $white;
+    header {
+      background: $black;
+    }
+    section#about {
+      .content {
+        .left {
+          .btn {
+            a {
+              background-color: $orange;
+              color: $black;
+
+              &:hover {
+                background: $black;
+                color: $orange;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
 header {
   position: sticky;
+  z-index: 500;
   top: 0;
   width: 100%;
   padding: 15px;
@@ -35,6 +57,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: $white;
+  transition-property: background;
+  transition-duration: 500ms;
 
   .logo {
     width: 10%;
@@ -64,6 +89,82 @@ header {
       font-size: 0.8rem;
       color: $orange;
       text-decoration: none;
+    }
+  }
+}
+.title {
+  margin-top: 15%;
+  h1 {
+    width: 100%;
+    text-align: center;
+
+    font-size: 5rem;
+
+    span {
+      display: inline-flex;
+      margin-left: 25px;
+      width: 25px;
+    }
+  }
+  h1::first-letter {
+    color: #ff6d0a;
+  }
+  p {
+    width: 100%;
+    text-align: center;
+    font-size: 1rem;
+  }
+}
+section#about {
+  margin-top: 20%;
+  width: 100%;
+  h2 {
+    width: 100%;
+    font-size: 2rem;
+    text-align: center;
+    font-weight: 300;
+    color: $orange;
+  }
+  .content {
+    display: flex;
+    margin-top: 5%;
+    display: flex;
+    .right {
+      width: 30%;
+      .img {
+        width: 70%;
+        margin: auto;
+
+        img {
+          width: 100%;
+          border-radius: 20px;
+        }
+      }
+    }
+    .left {
+      width: 80%;
+      p {
+        margin: auto;
+        width: 90%;
+      }
+      .btn {
+        margin-top: 5%;
+        margin-left: 5%;
+        a {
+          padding: 10px;
+          border-radius: 15px;
+          box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.25);
+          background-color: $orange;
+          color: $white;
+          text-decoration: none;
+          transition: background, color;
+          transition-duration: 500ms;
+          &:hover {
+            background: $white;
+            color: $orange;
+          }
+        }
+      }
     }
   }
 }
