--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -333,7 +333,7 @@ section#project {
           color: $white;
           font-size: 0.9rem;
           font-weight: 300;
-          padding: 2%;
+          padding: 5px;
           padding-left: 10px;
           padding-right: 10px;
           margin: 5px;
