--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -86,6 +86,15 @@ html {
         }
       }
     }
+    footer {
+      .grid {
+        div {
+          svg {
+            color: $black;
+          }
+        }
+      }
+    }
   }
 }
 header {
@@ -479,28 +488,28 @@ section#contact {
     }
   }
 }
-footer{
+footer {
   width: 100%;
   margin-top: 10%;
   background-color: $orange;
-  .grid{
+
+  .grid {
     width: 40%;
     margin: auto;
     display: grid;
     align-content: center;
     justify-content: center;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
-    div{
+    grid-template-columns: repeat(4, 0.1fr);
+    gap: 0.5rem;
+
+    padding: 10px;
+
+    padding: 5px;
+    div {
       width: 100%;
-      svg{
-        font-size: 5rem;
+      svg {
         color: $white;
       }
     }
-
-  
   }
- 
-
 }
