--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -48,6 +48,7 @@ html {
       .cards {
         .card {
           background-color: $dark;
+          color: $white;
 
           h3 {
             color: $white;
@@ -332,12 +333,14 @@ section#project {
       flex-direction: column;
     }
     .card {
+      text-decoration: none;
+      color: $black;
       cursor: pointer;
       transition-property: background, color;
       transition-duration: 500ms;
+      border-radius: 15px;
       width: 300px;
       position: relative;
-      border-radius: 25px;
       margin: 10px;
       background-color: $white;
       box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.25);
