--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -536,6 +536,15 @@ section#work {
       border-radius: 15px;
     }
   }
+  .img{
+    
+    width: 60%;
+    margin: auto;
+    margin-top: 5%;
+    img{
+      width: 100%;
+    }
+  }
 }
 footer {
   width: 100%;
