--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -531,10 +531,15 @@ section#work {
     margin: auto;
     margin-top: 5%;
     text-align: left;
-    font-size: 19px;
+    font-size: 1.3rem;
     text-align: justify;
     color: $gris;
     font-weight: 400;
+    @media screen and (max-width: 800px) {
+      width: 80%;
+      font-size: 1rem;
+      text-align: left;
+    }
   }
   .tools {
     width: 50%;
@@ -559,6 +564,10 @@ section#work {
     }
   }
   .img {
+    @media screen and (max-width: 800px) {
+      width: 90%;
+
+    }
     width: 60%;
     margin: auto;
     margin-top: 5%;
@@ -590,5 +599,16 @@ footer {
         color: $white;
       }
     }
+  }
+}
+.cv{
+  width: 65%;
+  margin: auto;
+  margin-top: 5%;
+  @media screen and (max-width: 450px) {
+    width: 80%;
+  }
+  img{
+    width: 100%;
   }
 }
